
[*] Added an option to disable the upload spiner
    https://github.com/nimbusproject/nimbus/issues/30

[*] Made it so an error is returned when a cert value is set that does not
    exist.
    https://github.com/nimbusproject/nimbus/issues/43

[*] Expand ~/ for cloud.properties options like nimbus.cert
    https://github.com/nimbusproject/nimbus/issues/5

nimbus-cloud-client-018
-----------------------

[*] Changed the default settings in jets3t that caused a timeout if the 
    socket was idle for more than 60 seconds.  Some machines flush their
    cache on close and if they have a lot of memory it can exceed this 
    timeout.  This lead to an infite repeat of the upload.
    https://github.com/nimbusproject/nimbus/issues/issue/29
    
[*] Made the spinner update less frequently (once per second).  This cause
    less noise on the network for remote users.
    https://github.com/nimbusproject/nimbus/issues/issue/28

[*] Allowed the progress bar to reach 100% instead of staying at 99%
    https://github.com/nimbusproject/nimbus/issues/issue/31/


nimbus-cloud-client-017
-----------------------

[*] Fixed a bug when running common images from cumulus.
    https://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=7087

[*] Fixed need to have a grid proxy when running --save and key is
    unencrypted.
    https://bugzilla.mcs.anl.gov/globus/show_bug.cgi?id=7090

[*] nimbus.cert and nimbus.key properties are now resolved relative
    to the properties file they are read from, if they are not
    absolute paths.

[*] Better error reporting

[*] Fixed incorrect timestamp print.


nimbus-cloud-client-016
-----------------------

[*] Introduces Cumulus/S3 support using the Jets3t library.
    See http://www.nimbusproject.org/docs/2.5/changelog.html#2.5

[*] When using Cumulus support, the credentials for this are in the
    cloud.properties file directly, so it needs to be protected.

[*] Introduced default.properties which is a copy of distributed
    cloud.properties.
